--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<header>
@@ -41,6 +41,8 @@ loginButton.addEventListener('click', () => {
 		loginForm.style.display = 'none';
 	}
 });
+
+
     </script>
 </body>
 </html>
