--- a/index.html
+++ b/index.html
@@ -32,15 +32,51 @@
 	</footer>
     <script>
         const loginButton = document.getElementById('login-button');
-const loginForm = document.getElementById('login-form');
+		const loginForm = document.getElementById('login-form');
+		const usernameField = document.getElementById('username');
+		const passwordField = document.getElementById('password');
 
-loginButton.addEventListener('click', () => {
-	if (loginForm.style.display === 'none') {
-		loginForm.style.display = 'block';
-	} else {
-		loginForm.style.display = 'none';
-	}
-});
+		loginButton.addEventListener('click', () => {
+			if (loginForm.style.display === 'none') {
+				loginForm.style.display = 'block';
+			} else {
+				loginForm.style.display = 'none';
+			}
+		});
+
+		loginForm.addEventListener('submit', (event) => {
+			event.preventDefault();
+
+			// Perform form validation
+			if (usernameField.value.trim() === '') {
+				alert('Please enter a username.');
+				return;
+			}
+
+			if (passwordField.value.trim() === '') {
+				alert('Please enter a password.');
+				return;
+			}
+
+			// Send login request to the server
+			fetch('/login', {
+				method: 'POST',
+				body: new FormData(loginForm),
+			})
+				.then(response => {
+					if (response.ok) {
+						alert('Login successful!');
+						// Redirect to the dashboard page
+						window.location.href = '/dash';
+					} else {
+						alert('Invalid username or password.');
+					}
+				})
+				.catch(error => {
+					alert('An error occurred while logging in.');
+					console.error(error);
+				});
+		});
 
 
     </script>
