--- a/admin.html
+++ b/admin.html
@@ -9,4 +9,16 @@
 <body>
     admin view
 </body>
+<script>
+    (function(d, w, c) {
+        w.SibConversationsID = '6443bb21123edf2e83064d14';
+        w[c] = w[c] || function() {
+            (w[c].q = w[c].q || []).push(arguments);
+        };
+        var s = d.createElement('script');
+        s.async = true;
+        s.src = 'https://conversations-widget.sendinblue.com/sib-conversations.js';
+        if (d.head) d.head.appendChild(s);
+    })(document, window, 'SibConversations');
+</script>
 </html>
