--- a/user.html
+++ b/user.html
@@ -8,16 +8,15 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="/">Log out</a></li>
+				
 			</ul>
 		</nav>
 	</header>
 	<main>
 		<h1>Welcome to your user page</h1>
 		<div class="model-container">
-			<h2>Choose a cyber security model to learn more about:</h2>
+			<h2>Select an assaiged cyber security model:</h2>
 			<ul class="model-list">
 				<li><a href="#">Firewalls</a></li>
 				<li><a href="#">Intrusion Detection Systems</a></li>
