--- a/admin.html
+++ b/admin.html
@@ -27,7 +27,7 @@
 				<th>Assign Courses</th>
 			</tr>
 			<tr>
-				<td>User 1</td>
+				<td>Pedro</td>
 				<td>Module 1, Module 2</td>
 				<td>
 					<form>
@@ -41,7 +41,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td>User 2</td>
+				<td>Segro</td>
 				<td>Module 2, Module 4</td>
 				<td>
 					<form>
@@ -55,7 +55,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td>User 3</td>
+				<td>Gregor</td>
 				<td>Module 1, Module 3</td>
 				<td>
 					<form>
@@ -101,6 +101,13 @@
     })(document, window, 'SibConversations');
 </script>
 <style>
+    select {
+  font-size: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  background-color: #c0b3b3;
+}
     table {
   margin: auto;
   border-collapse: collapse;
