--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
+	
 	<main>
-		<h1>Welcome to my website</h1>
-		<p>Here's some content for the landing page.</p>
+		<h1>Hi welcome to CyberVille</h1>
+		<p>We are here to guide you through CyberSecurity trainings with a chatbot that recommendeds modules.</p>
         <button id="login-button">Login</button>
+        <button id="login-button">Register</button>
+        
 	</main>
     <form id="login-form" style="display: none;">
         <label for="username">Username:</label>
@@ -27,9 +21,7 @@
 			<button type="submit">Login</button>
         
     </form>
-	<footer>
-		<p>Copyright © 2023</p>
-	</footer>
+	
     <script>
         const loginButton = document.getElementById('login-button');
 		const loginForm = document.getElementById('login-form');
