--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	
+	<div class="sticky-header">
 	<main>
-		<h1>Hi welcome to CyberVille</h1>
+		<h1>Welcome to CyberVille</h1>
 		<p>We are here to guide you through CyberSecurity trainings with a chatbot that recommendeds modules.</p>
         <button id="login-button">Login</button>
         <button id="login-button">Register</button>
         
 	</main>
+</div>
     <form id="login-form" style="display: none;">
         <label for="username">Username:</label>
 			<input type="text" id="username" name="username" required>
