--- a/admin.html
+++ b/admin.html
@@ -28,17 +28,17 @@
 				<th>Assign Courses</th>
 			</tr>
 			<tr>
-				<td>Pedro</td>
-				<td>Module 1</td>
+				<td><h1>Pedro</h1></td>
+				<td><h3>Firewalls</h3></td>
         <td>
 					<div class="progress-bar-container">
-						<div class="progress-bar" style="width: 100%;">60%</div>
+						<div class="progress-bar" style="width: 100%;"><h1>20%</h1></div>
 					</div>
 				</td>
 				<td>
-					<form>
+					<form >
 						<select name="course">
-							<option value="Module 3">Module 3</option>
+							<option value="Module 3">Intrusion Detection Systems</option>
 							<option value="Module 4">Module 4</option>
 							<option value="Module 5">Module 5</option>
 						</select>
@@ -48,17 +48,17 @@
         
 			</tr>
 			<tr>
-				<td>Segro</td>
-				<td>Module 2</td>
+				<td> <h1>Segro</h1></td>
+				<td><h3>Intrusion Detection Systems</h3></td>
         <td>
 					<div class="progress-bar-container">
-						<div class="progress-bar" style="width: 100%;">60%</div>
+						<div class="progress-bar" style="width: 100%;"><h1>44%</h1></div>
 					</div>
 				</td>
 				<td>
 					<form>
 						<select name="course">
-							<option value="Module 1">Module 1</option>
+							<option value="Module 1">Virtual Private Networks</option>
 							<option value="Module 3">Module 3</option>
 							<option value="Module 5">Module 5</option>
 						</select>
@@ -67,17 +67,17 @@
 				</td>
 			</tr>
 			<tr>
-				<td>Gregor</td>
-				<td>Module 1</td>
+				<td><h1>Gregor</h1></td>
+				<td><h3>Virtual Private Networks</h3></td>
         <td>
 					<div class="progress-bar-container">
-						<div class="progress-bar" style="width: 100%;">60%</div>
+						<div class="progress-bar" style="width: 100%;"><h1>88%</h1></div>
 					</div>
 				</td>
 				<td>
 					<form>
 						<select name="course">
-							<option value="Module 2">Module 2</option>
+							<option value="Module 2">Firewalls</option>
 							<option value="Module 4">Module 4</option>
 							<option value="Module 5">Module 5</option>
 						</select>
@@ -87,7 +87,7 @@
 			</tr>
 		</table>
         <td colspan="3">
-            <button id="generate-course-btn">Generate Recommended Course</button>
+            <button id="generate-course-btn">Find more training courses</button>
           </td>
 	</main>
 	
