--- a/user.html
+++ b/user.html
@@ -16,7 +16,7 @@
 	<main>
 		<h1 style="text-align: center;">Lets start learing!</h1>
 		<div class="model-container">
-            <h2>Select an assigned cyber security model:</h2>
+            <h2>Select an assigned cyber security course:</h2>
             <ol class="model-list">
                 <li><a href="#">Firewalls <span>(14%)</span></a></li>
                 <li><a href="#">Intrusion Detection Systems <span>(74%)</span></a></li>
@@ -43,7 +43,7 @@
 </body>
 <style>
     
-    
+	
     .model-container {
         background-color: #F5F5F5;
         padding: 20px;
