--- a/fr.html
+++ b/fr.html
@@ -32,8 +32,8 @@
                   </form>
                 </div>
                 
-                <li><a href="#">Intrusion Detection Systems </a></li>
-                <li><a href="#">Virtual Private Networks </a></li>
+                <li><a href="#">Intrusion Detection Systems <span>(74%)</span></a></li>
+                <li><a href="#">Virtual Private Networks <span>(24%)</span></a></li>
                 
             </ol>
         </div>
