--- a/user.html
+++ b/user.html
@@ -53,7 +53,7 @@ function submitForm(event) {
   event.preventDefault();
   // Handle form submission here
   console.log("Form submitted!");
-  window.location.href = "/train";
+  window.location.href = "http://20.91.189.150/webconsole/webconsole.php";
 }
 
 
